--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -46,6 +46,8 @@
                     <header>
                         <h2>Works</h2>
                         <p>Take a look in our portfolio</p>
+                    </header>
+                    <div>
                         <article>
                             <h3>Interior Design</h3>
                         </article>
@@ -55,7 +57,7 @@
                         <article>
                             <h3>Personal Brand</h3>
                         </article>
-                    </header>
+                    </div>
                 </div>
             </section>
             <section>
