--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -98,7 +98,7 @@
                 </div>
             </section>
             <br>
-            <!--- Latest news section -->
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
@@ -133,7 +133,7 @@
                 </div>
             </section>
             <br>
-            <!--- Testimonials section -->
+            <!-- Testimonials section -->
             <section>
                 <div>
                     <header>
@@ -156,7 +156,7 @@
                 </div>
             </section>
             <br>
-            <!--- Contact section -->
+            <!-- Contact section -->
             <section>
                 <div>
                     <header>
