--- a/html_advanced/30-styleguide.html
+++ b/html_advanced/30-styleguide.html
@@ -82,11 +82,11 @@
             <!-- Blockquotes -->
             <section>
                 <header>
-                    <h3>Blockquotes</h3>
+                    <h2>Blockquotes</h2>
                 </header>
                 <div>
                     <h3>Inline quote</h3>
-                    <cite>Stay hungry. Stay foolish.</cite>
+                    <q>Stay hungry. Stay foolish.</q>
                 </div>
                 <div>
                     <h3>Blockquote</h3>
