--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -177,13 +177,15 @@
                         </p>
                     </details>
                 </div>
-                <h3>Open</h3>
-                <details open>
-                    <summary>Always open</summary>
-                    <p>
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </p>
-                </details>
+                <div>
+                    <h3>Open</h3>
+                    <details open>
+                        <summary>Always open</summary>
+                        <p>
+                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                        </p>
+                    </details>
+                </div>
             </section>
         </main>
         <footer></footer>
